results/SpecGenBench/0-shot/log-IsBoomerang-2023_11_28_22_34_36.txt
class IsBoomerang {
    //@ requires points != null;
    //@ requires points.length == 3;
    //@ requires points[0] != null && points[1] != null && points[2] != null;
    //@ requires points[0].length == 2 && points[1].length == 2 && points[2].length == 2;
    //@ ensures \result == (v1[0] * v2[1] - v1[1] * v2[0] != 0);
    public boolean isBoomerang(int[][] points) {
        int[] v1 = {points[1][0] - points[0][0], points[1][1] - points[0][1]};
        int[] v2 = {points[2][0] - points[0][0], points[2][1] - points[0][1]};
        return v1[0] * v2[1] - v1[1] * v2[0] != 0;
    }
}
/home/max/Documents/JMLGPT/tmp/IsBoomerang.java:6: error: cannot find symbol
    //@ ensures \result == (v1[0] * v2[1] - v1[1] * v2[0] != 0);
                            ^
  symbol:   variable v1
  location: class IsBoomerang
/home/max/Documents/JMLGPT/tmp/IsBoomerang.java:6: error: cannot find symbol
    //@ ensures \result == (v1[0] * v2[1] - v1[1] * v2[0] != 0);
                                    ^
  symbol:   variable v2
  location: class IsBoomerang
/home/max/Documents/JMLGPT/tmp/IsBoomerang.java:6: error: cannot find symbol
    //@ ensures \result == (v1[0] * v2[1] - v1[1] * v2[0] != 0);
                                            ^
  symbol:   variable v1
  location: class IsBoomerang
/home/max/Documents/JMLGPT/tmp/IsBoomerang.java:6: error: cannot find symbol
    //@ ensures \result == (v1[0] * v2[1] - v1[1] * v2[0] != 0);
                                                    ^
  symbol:   variable v2
  location: class IsBoomerang
4 errors

